; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_uark.c_uark_cfg_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_uark.c_uark_cfg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uark_softc = type { i32, i32 }
%struct.usb_device_request = type { i32, i32, i32, i32, i32 }

@UARK_WRITE = common dso_local global i32 0, align 4
@UARK_REQUEST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"device request failed, err=%s (ignored)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uark_softc*, i32, i32)* @uark_cfg_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uark_cfg_write(%struct.uark_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.uark_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.usb_device_request, align 4
  %8 = alloca i64, align 8
  store %struct.uark_softc* %0, %struct.uark_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @UARK_WRITE, align 4
  %10 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 4
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @UARK_REQUEST, align 4
  %12 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 3
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @USETW(i32 %14, i32 %15)
  %17 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @USETW(i32 %18, i32 %19)
  %21 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @USETW(i32 %22, i32 0)
  %24 = load %struct.uark_softc*, %struct.uark_softc** %4, align 8
  %25 = getelementptr inbounds %struct.uark_softc, %struct.uark_softc* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.uark_softc*, %struct.uark_softc** %4, align 8
  %28 = getelementptr inbounds %struct.uark_softc, %struct.uark_softc* %27, i32 0, i32 0
  %29 = call i64 @ucom_cfg_do_request(i32 %26, i32* %28, %struct.usb_device_request* %7, i32* null, i32 0, i32 1000)
  store i64 %29, i64* %8, align 8
  %30 = load i64, i64* %8, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %3
  %33 = load i64, i64* %8, align 8
  %34 = call i32 @usbd_errstr(i64 %33)
  %35 = call i32 @DPRINTFN(i32 0, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %34)
  br label %36

36:                                               ; preds = %32, %3
  ret void
}

declare dso_local i32 @USETW(i32, i32) #1

declare dso_local i64 @ucom_cfg_do_request(i32, i32*, %struct.usb_device_request*, i32*, i32, i32) #1

declare dso_local i32 @DPRINTFN(i32, i8*, i32) #1

declare dso_local i32 @usbd_errstr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
